<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.romario.componentes.MainActivity">

    <Button
        android:id="@+id/btnCompo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCompo"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="183dp"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="262dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="197dp"
        android:layout_height="40dp"
        android:text="@string/txtPrincipal"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="53dp"
        android:layout_marginTop="63dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
