<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.romario.componentes.LoginActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="197dp"
        android:layout_height="40dp"
        android:text="@string/txtLogin"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="53dp"
        android:layout_marginTop="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtUsu"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPass"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/txtUsu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="59dp"
        android:layout_marginStart="59dp" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enviar Datos"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/txtPass"
        android:layout_toLeftOf="@+id/btnRegresar"
        android:layout_toStartOf="@+id/btnRegresar"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp" />

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Regresar"
        android:layout_alignBaseline="@+id/btnEnviar"
        android:layout_alignBottom="@+id/btnEnviar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="59dp"
        android:layout_marginEnd="59dp" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <EditText
        android:id="@+id/txtUsu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:ems="10"
        android:inputType="textPersonName" />

</RelativeLayout>
